counter-backend/counter-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-backend
spec:
  selector:
    matchLabels:
      app: counter-backend
  replicas: 2
  template:
    metadata:
      labels:
        app: counter-backend
    spec:
      containers:
        - name: counter-backend
          image: >-
            ghcr.io/kanishankoneswaran/counter-backend:v1
          ports:
            - containerPort: 8080
              protocol: TCP
