counter-backend/counter-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: counter-backend
  name: counter-backend
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: counter-backend
  sessionAffinity: None
  type: ClusterIP
